# hlx-studio

./: .gitignore  App.tsx  CHANGELOG.md  GIT_COMMIT_SUMMARY.md  HELIX_MOE_RESEARCH_PAPER.md  HLXPlayground.tsx  HLX_BOOTSTRAP_CODEX_v1.json  LICENSE  PHASE1_KICKOFF.md  README.md  README_COMPLETE_SYSTEM.md  REPOSITORY_REORGANIZATION.md  STATUS.txt  VERIFICATION_REPORT.md  VULKAN_CUDA_BENCHMARK_PLAN.md  VULKAN_ROADMAP.md  WAKE_UP_SUMMARY.md  glyphs_clean.ts  hlx-dev-studio.desktop  hlx_playground_passes_16_20-1.ts  hlxl_compiler_update.ts  index.css  index.html  index.js  install_launcher.sh  launch-studio.sh  package.json  run-helix-studio.sh  server.py  start_helix_brain.sh  start_studio.sh  stop_helix_brain.sh  tailwind.config.js  test_claude_api.py  tsconfig.json  types.ts
.chromadb/: chroma.sqlite3
Training_Materials/: README.md  TRAINING_CURRICULUM.md  corpus_ascii_specialist.jsonl  corpus_coordinator_augmented.jsonl  corpus_hlx_training.jsonl  corpus_phase1_general.jsonl  corpus_runic_specialist.jsonl  moe_router.py
_archive/: AUDIT_PHASES_6_7.md  BRAIN_CODE_REFERENCE.md  BRAIN_DOCS_INDEX.md  BRAIN_IMPLEMENTATION_CHECKLIST.md  BRAIN_INTEGRATION.md  BRAIN_QUICKSTART.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI_DROP_16_20.ts  GEMINI_TASK_16_20.hlxl  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.txt  LAUNCHER_GUIDE.md  PHASE6_SETUP.md  PHASE7_COMPLETION.md  QUICKSTART_NATIVE_APP.md  README.md  REPOSITORY_REORGANIZATION.md  TAURI_BUILD_SUMMARY.md  VULKAN_PHASE1_ASSESSMENT.md  WAYLAND_FIX.md  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+271 files in other folders)
