[package]
name = "hlx-dev-studio"
version = "1.0.1"
description = "LLM-native IDE with reversible HLX language pipeline"
authors = ["Architect"]
license = "MIT OR Apache-2.0"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
